--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="scores">
 		<button id="start-button"> Başlat/Duraklat </button>
-		<h3> Skor: <span id="score">0</span></h3>
+		<h3 id="music"> Skor: <span id="score">0</span></h3>
 	</div>
 	<div class="container">
 		<div class="grid">
